# jeeves

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: ai_logging.py  auth.py  config.py  conversation_store.py  database.py  graph.py  graph_config_store.py  graph_contracts.py  graph_prompt_values.py  llm.py  llm_config_store.py  main.py  messages.py  node_registry.py  node_runs.py  prompt_compiler.py  prompt_defaults.py  schemas.py  telemetry.py
backend/app/api/: ai_logs.py  auth.py  chat.py  conversations.py  graph_configs.py  liked_cards.py  llm_configs.py  system.py
backend/app/graphs/: pipeline.py  registry.py  simple_chat.py  summary_analysis.py  viral_tweet.py
backend/app/nodes/: article_value_nodes.py  assistant.py  single_question_diagnosis_nodes.py  summary_analysis_nodes.py  viral_tweet_nodes.py
backend/app/repositories/: ai_logs.py  conversations.py  graph_configs.py  liked_cards.py  llm_configs.py
backend/app/services/: chat_service.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_api.py
deploy/: .env.compose.example  README.md  deploy.sh  docker-compose.yml
deploy/docker/: nginx.conf
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  patch.py  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx
frontend/components/: assistant-workspace.tsx  auth-shell.tsx  chat-assistant.tsx  chat-pane.tsx  (+3 more)
(+26 files in other folders)
