[project]
name = "jeeves-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for the Jeeves AI assistant prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langgraph>=0.2,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[tool.uv]
package = false
