[project]
name = "jeeves-backend"
version = "0.1.0"
description = "FastAPI + LangGraph backend for the Jeeves AI assistant prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langgraph>=0.2,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
    "tenacity>=8.2.3,<9.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
